force-app/main/default/objects/IntegrationExecutionState__c/IntegrationExecutionState__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Tracks execution state for integration mappings - last run time, next scheduled time, and execution status</description>
    <label>Integration Execution State</label>
</CustomObject>