force-app/main/default/objects/IntegrationExecutionState__c/fields/Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Date__c</fullName>
    <description>Timestamp of the last successful execution for this mapping</description>
    <label>Last Run Date</label>
    <type>DateTime</type>
</CustomField>