force-app/main/default/objects/IntegrationExecutionState__c/fields/Last_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Status__c</fullName>
    <description>Status of the last execution: Success, Failed, or Skipped</description>
    <label>Last Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>