force-app/main/default/objects/IntegrationExecutionState__c/fields/Next_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Time__c</fullName>
    <description>Calculated timestamp when this mapping should run next based on frequency settings</description>
    <label>Next Scheduled Time</label>
    <type>DateTime</type>
</CustomField>